@@ -1,12 +1,12 @@
 post_install() {
   echo "------------------------------------------------------------------------------------"
-  echo "Please issue the following to setup the Play! framework environment:"
+  echo "Please issue the following command to setup the Play! framework environment:"
   echo "source /etc/profile.d/play-framework.sh"
   echo "------------------------------------------------------------------------------------"
 }
 
 post_upgrade() {
- post_install $1
+  post_install $1
 }
 
 # vim:set ts=2 sw=2 et:
